--- a/practica 6 - Jordi/practica6.html
+++ b/practica 6 - Jordi/practica6.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+<!--Fet per Jordi Manyà Galindo -->
 <head>
     <meta charset="utf-8"/>
 </head>
 <body>
+    <!--En aquest HTML he creat un formulari idèntic al de la imatge proporcionada a la pràctica 6-->
     <form method="post" target="_blank">
         <label>Nom </label>
         <input type="text" placeholder="el teu nom"><br><br>
