practica parte de la javier finish

--- a/practica8/practica8.html
+++ b/practica8/practica8.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">                              
-        <title>Practica8</title> 
+        <title>Practica8</title>                        <!--esta esta creado los divs de la pagina,osea son los caja para logo tocar en css-->
         <link rel="stylesheet" href="practica8.css">  
     </head>
     <header>
