--- a/UF1 - XML, HTML, JSON/practica 6 - Jordi/practica6.html
+++ b/UF1 - XML, HTML, JSON/practica 6 - Jordi/practica6.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+<!--Fet per Jordi Manyà Galindo -->
 <head>
     <meta charset="utf-8"/>
 </head>
 <body>
+    <!--En aquest HTML he creat un formulari idèntic al de la imatge proporcionada a la pràctica 6-->
     <form method="post" target="_blank">
         <label>Nom </label>
         <input type="text" placeholder="el teu nom"><br><br>
@@ -38,7 +40,6 @@
             <option>HTML5</option>
             <option>HTML 4.01</option>
             <option>XHTML 1.0</option>
-            <option>HTML5</option>
         </select>
         
     </form>
